--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
   port: 8080
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/student_db
+    url: jdbc:postgresql://localhost:5432/bank_db
     username: jihen
     password: jihen
     driver-class-name: org.postgresql.Driver
